# rufius

./: README.md
rufius.android/: local.properties  private.gpg  public.gpg
rufius.android/app/: build.gradle  proguard-rules.pro
rufius.android/app/src/androidTest/java/lab/drys/rufius/: ApplicationTest.java
rufius.android/app/src/main/: AndroidManifest.xml
rufius.android/app/src/main/java/lab/drys/rufius/: MainActivity.java  MainActivityReceiver.java  MainDrawer.java  Rufius.java  RufiusActivityBasic.java
rufius.android/app/src/main/java/lab/drys/rufius/services/: GoogleWorkerService.java  MainService.java  SShService.java  SwitcherService.java
rufius.android/app/src/main/java/lab/drys/rufius/unit/: UnitActivity.java  UnitActivityReceiver.java  UnitImageArrayAdapter.java  UnitImageListFragment.java  UnitImageLoader.java  UnitImagePagerAdapter.java  UnitPreferencesActivity.java  UnitPreferencesFragment.java  UnitsArrayAdapter.java  UnitsListFragment.java
rufius.android/app/src/main/java/lab/drys/rufius/utilities/: Commander.java  DialogPermission.java  DialogUnitDeletion.java  DrawerAdapter.java  DrawerItem.java  MailReaderWorker.java  NetworkSwitchReceiver.java
rufius.android/app/src/main/res/: Rufius-4379df30504c.json
rufius.android/app/src/main/res/drawable/: circle.xml  toast_background.xml  unitlist_selector.xml
rufius.android/app/src/main/res/layout/: activity_main.xml  activity_unit.xml  activity_unit_preferences.xml  dialog_message.xml  dialog_password.xml  dialog_unknown_host.xml  drawer_list_item.xml  fragment_unit_image_list.xml  fragment_units_list.xml  toast_info.xml  unit_image_list_item.xml  unit_list_item.xml
rufius.android/app/src/main/res/menu/: main_activity_menu.xml  unit_preferences_activity_menu.xml  units_list_action_menu.xml
rufius.android/app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  strings.xml  style.xml  themes.xml
rufius.android/app/src/main/res/xml/: unit_preferences.xml
rufius.raspberry/: CMakeCache.txt  CMakeFunctions.cmake  CMakeLists.txt  Makefile  cmake_install.cmake  config.h.in  install_manifest.txt  main.cxx
rufius.raspberry/include/: Rufius.h  Rufius_Daemon.h  Rufius_Informer.h  Rufius_Main.h  Rufius_Motion.h  Rufius_User.h  config.h
rufius.raspberry/motion/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h.in
rufius.raspberry/motion/include/: conf.h  config.h  motion.h  netcam.h  netcam_ftp.h  track.h  video.h
rufius.raspberry/motion/src/: alg.cxx  conf.cxx  draw.cxx  event.cxx  ffmpeg.cxx  jpegutils.cxx  motion.cxx  netcam.cxx  netcam_ftp.cxx  netcam_jpeg.cxx  netcam_wget.cxx  picture.cxx  rotate.cxx  track.cxx  video.cxx  video2.cxx  video_common.cxx  webcam.cxx  webhttpd.cxx
rufius.raspberry/src/: Rufius.cxx  Rufius_Daemon.cxx  Rufius_Informer.cxx  Rufius_Main.cxx  Rufius_Motion.cxx  Rufius_User.cxx
